fixed alignment of more stops section so it is center with the page.

--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,9 @@ body, html {
     background-color: rgb(225, 201, 133);
     padding-top: 20px;
     margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .moreRoute h2, .card h2{
   text-align: center;
@@ -165,6 +168,7 @@ body, html {
   margin-top: 20px;
   display: flex;
   flex-direction: row;
+  
 }
 
 /* Clear floats after the columns */
